[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/scenes/OptionsPage/OptionsPage.gd" type="Script" id=1]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=2]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=3]
[ext_resource path="res://scripts/scenes/OptionsPage/GraphicsBox.gd" type="Script" id=4]
[ext_resource path="res://scripts/scenes/OptionsPage/FPSBox.gd" type="Script" id=5]
[ext_resource path="res://scripts/scenes/OptionsPage/LPMBox.gd" type="Script" id=6]
[ext_resource path="res://scripts/scenes/OptionsPage/MusicBox.gd" type="Script" id=8]
[ext_resource path="res://scripts/scenes/OptionsPage/VolumeBar.gd" type="Script" id=9]
[ext_resource path="res://scripts/scenes/OptionsPage/MusicBar.gd" type="Script" id=10]
[ext_resource path="res://scripts/scenes/OptionsPage/SFXBar.gd" type="Script" id=11]
[ext_resource path="res://scenes/Custom_Music.gd" type="Script" id=14]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="OptionsPage" type="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.75
margin_top = -2.25
margin_right = 0.75
margin_bottom = -2.25
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -43.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics & Audio" type="Tabs" parent="TabContainer"]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Graphics & Audio"]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicsBox" type="VBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer"]
light_mask = 2
margin_right = 506.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox"]
light_mask = 2
margin_right = 506.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_GRAPHICS"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox"]
margin_top = 358.0
margin_right = 506.0
margin_bottom = 442.0

[node name="FPSBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer"]
margin_right = 506.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/FPSBox"]
light_mask = 2
margin_right = 426.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_FPS"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/FPSBox"]
light_mask = 2
margin_left = 430.0
margin_right = 506.0
margin_bottom = 40.0

[node name="LPMBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer"]
margin_top = 44.0
margin_right = 506.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/LPMBox"]
light_mask = 2
margin_right = 426.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_LPM"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/LPMBox"]
light_mask = 2
margin_left = 430.0
margin_right = 506.0
margin_bottom = 40.0

[node name="Advanced" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox"]
light_mask = 2
margin_top = 446.0
margin_right = 506.0
margin_bottom = 483.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_AO"

[node name="MusicBox" type="VBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
light_mask = 2
margin_right = 506.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_MUSIC"
align = 1
valign = 1

[node name="VolumeBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_top = 54.0
margin_right = 506.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/VolumeBox"]
light_mask = 2
margin_right = 506.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_VOLUME"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/VolumeBox"]
visible = false
light_mask = 2
margin_left = 127.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 1 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/VolumeBox"]
visible = false
light_mask = 2
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 1 )
text = "Unmuted"
flat = true

[node name="VolumeBar" type="HSlider" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
light_mask = 2
margin_top = 108.0
margin_right = 506.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
step = 0.001
value = -10.0
rounded = true
ticks_on_borders = true
script = ExtResource( 9 )

[node name="MusicBox2" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
light_mask = 2
margin_top = 162.0
margin_right = 506.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox2"]
light_mask = 2
margin_right = 506.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Selected Music Volume"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox2"]
visible = false
light_mask = 2
margin_left = 157.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 2 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox2"]
visible = false
light_mask = 2
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 2 )
text = "Unmuted"
flat = true

[node name="MusicBar2" type="HSlider" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
light_mask = 2
margin_top = 216.0
margin_right = 506.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
step = 0.001
value = -10.0
rounded = true
ticks_on_borders = true
script = ExtResource( 10 )

[node name="MusicBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
light_mask = 2
margin_top = 270.0
margin_right = 506.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox"]
light_mask = 2
margin_right = 506.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_BACKGROUND"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox"]
visible = false
light_mask = 2
margin_left = 157.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 2 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox"]
visible = false
light_mask = 2
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 2 )
text = "Unmuted"
flat = true

[node name="MusicBar" type="HSlider" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
light_mask = 2
margin_top = 324.0
margin_right = 506.0
margin_bottom = 374.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
step = 0.001
value = -10.0
rounded = true
ticks_on_borders = true
script = ExtResource( 10 )

[node name="SFXBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_top = 378.0
margin_right = 506.0
margin_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/SFXBox"]
light_mask = 2
margin_right = 506.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_SFX"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/SFXBox"]
visible = false
light_mask = 2
margin_left = 127.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 3 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/SFXBox"]
visible = false
light_mask = 2
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 3 )
text = "Unmuted"
flat = true

[node name="SFXBar" type="HSlider" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
light_mask = 2
margin_top = 432.0
margin_right = 506.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
step = 0.001
value = -10.0
rounded = true
allow_greater = true
allow_lesser = true
ticks_on_borders = true
script = ExtResource( 11 )

[node name="WindowDialog" type="WindowDialog" parent="TabContainer/Graphics & Audio"]
light_mask = 2
anchor_left = 0.140748
anchor_top = 0.0621572
anchor_right = 0.886811
anchor_bottom = 0.85192
margin_left = -7.51019e-06
margin_top = 3.72529e-08
margin_right = 5.72205e-06
margin_bottom = 1.60933e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ItemList" type="ItemList" parent="TabContainer/Graphics & Audio/WindowDialog"]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = -61.0
items = [ "Pixel Adventure", null, false, "Jungle Ruins", null, false, "Ice Cap", null, false, "Hill", null, false, "Sci-Fi", null, false, "CastleMania", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog2" type="WindowDialog" parent="TabContainer/Graphics & Audio"]
margin_right = 1015.0
margin_bottom = 549.0
window_title = "Advanced Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics & Audio/WindowDialog2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.5
margin_top = -63.0
margin_right = 192.5
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="TabContainer/Graphics & Audio/WindowDialog2/VBoxContainer"]
light_mask = 2
margin_right = 385.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_OM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="TabContainer/Graphics & Audio/WindowDialog2/VBoxContainer"]
light_mask = 2
margin_top = 41.0
margin_right = 385.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false
placeholder_text = "Path of selected track"
caret_blink = true

[node name="AutoLoadMods" type="CheckButton" parent="TabContainer/Graphics & Audio/WindowDialog2/VBoxContainer"]
visible = false
light_mask = 2
margin_top = 86.0
margin_right = 385.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 2 )
text = "Auto load mods"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Tabs" parent="TabContainer"]
visible = false
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )

[node name="Label" type="Label" parent="TabContainer/Controls"]
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -118.5
margin_right = 107.0
margin_bottom = 118.5
custom_fonts/font = ExtResource( 2 )
text = "KEY_CONTROLS"

[node name="Theme" type="Tabs" parent="TabContainer"]
visible = false
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Theme"]
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = -159.0
margin_right = 279.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="TabContainer/Theme/VBoxContainer"]
light_mask = 2
margin_right = 558.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_UI_THEME"
align = 1
valign = 1

[node name="Yellow" type="Button" parent="TabContainer/Theme/VBoxContainer"]
light_mask = 2
margin_top = 35.0
margin_right = 558.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_CT"

[node name="Neon" type="Button" parent="TabContainer/Theme/VBoxContainer"]
visible = false
light_mask = 2
margin_top = 76.0
margin_right = 558.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Neon"

[node name="Alien" type="Button" parent="TabContainer/Theme/VBoxContainer"]
visible = false
light_mask = 2
margin_top = 76.0
margin_right = 558.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Alien"

[node name="Light" type="Button" parent="TabContainer/Theme/VBoxContainer"]
visible = false
light_mask = 2
margin_top = 76.0
margin_right = 558.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Light"

[node name="Solarized_dark" type="Button" parent="TabContainer/Theme/VBoxContainer"]
visible = false
light_mask = 2
margin_top = 76.0
margin_right = 558.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Solarized_dark"

[node name="Solarized_light" type="Button" parent="TabContainer/Theme/VBoxContainer"]
visible = false
light_mask = 2
margin_top = 76.0
margin_right = 558.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Solarized_light"

[node name="Default" type="Button" parent="TabContainer/Theme/VBoxContainer"]
visible = false
light_mask = 2
margin_top = 76.0
margin_right = 558.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Default"

[node name="Old" type="Button" parent="TabContainer/Theme/VBoxContainer"]
visible = false
light_mask = 2
margin_top = 76.0
margin_right = 558.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Old"

[node name="CustomTheme" type="WindowDialog" parent="TabContainer/Theme"]
light_mask = 2
margin_right = 784.0
margin_bottom = 535.0

[node name="ThemeList" type="ItemList" parent="TabContainer/Theme/CustomTheme"]
light_mask = 2
margin_left = -2.0
margin_right = 787.0
margin_bottom = 449.0

[node name="Label" type="Label" parent="TabContainer/Theme/CustomTheme"]
light_mask = 2
margin_left = 2.0
margin_top = 458.0
margin_right = 784.0
margin_bottom = 537.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Theme_NOT"

[node name="ApplyButton" type="Button" parent="."]
light_mask = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -37.0
margin_right = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
shortcut = SubResource( 5 )
text = "KEY_APPLY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Custom_Music" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = "Custom Music"
script = ExtResource( 14 )
id = "Level"

[connection signal="pressed" from="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/FPSBox/CheckButton" to="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/FPSBox" method="_on_CheckButton_pressed"]
[connection signal="pressed" from="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/LPMBox/CheckButton" to="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/LPMBox" method="_on_CheckButton_pressed"]
[connection signal="pressed" from="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/Advanced" to="." method="_on_Advanced_pressed"]
[connection signal="value_changed" from="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/VolumeBar" to="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/VolumeBar" method="_on_VolumeBar_value_changed"]
[connection signal="value_changed" from="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBar2" to="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBar2" method="_on_MusicBar2_value_changed"]
[connection signal="value_changed" from="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBar" to="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBar" method="_on_MusicBar_value_changed"]
[connection signal="value_changed" from="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/SFXBar" to="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/SFXBar" method="_on_SFXBar_value_changed"]
[connection signal="item_selected" from="TabContainer/Graphics & Audio/WindowDialog/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="TabContainer/Graphics & Audio/WindowDialog2/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="TabContainer/Graphics & Audio/WindowDialog2/VBoxContainer/AutoLoadMods" to="." method="_on_AutoLoadMods_pressed"]
[connection signal="pressed" from="TabContainer/Theme/VBoxContainer/Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="item_selected" from="TabContainer/Theme/CustomTheme/ThemeList" to="." method="_on_ThemeList_item_selected"]
[connection signal="pressed" from="ApplyButton" to="." method="_on_ApplyButton_pressed"]
